--- a/SheCodes_Basics/Week-3/week-3-project.css
+++ b/SheCodes_Basics/Week-3/week-3-project.css
@@ -5,24 +5,26 @@
 }
 body {
     background-color: aliceblue;
-    background-image: url("https://images.unsplash.com/photo-1593328125760-2a9bf6288fb2?auto=format&fit=crop&q=80&w=2669&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
+    background-image: url("https://s3.amazonaws.com/shecodesio-production/uploads/files/000/102/934/original/marguerite-meadow_andreas-kretschmer-zUytXs3fusw-unsplash.jpg?1699102980");
     background-repeat: no-repeat;
     background-size: cover;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 span {
-    color: #78693b;
+    color: #5e522e;
     box-shadow: 5px 5px 10px whitesmoke;
     border-radius: 30px;
+    padding: 6px;
+
 }
 em {
-    color: #ECAA1C;
-    padding: 5px;
+    color: #cd9418;
+    padding: 8px;
     border-radius: 25px 8px  25px 8px ;
     background-color: rgba(245, 245, 245, 0.42);
 }
 .main-content {
-    background: linear-gradient(rgba(245, 245, 245, 0.712), #d9bf6fc3);
+    background: linear-gradient(rgba(245, 245, 245, 0.712),rgba(120, 118, 70, 0.9) ,rgba(216, 190, 110, 1));
     margin: 80px auto;
     min-width: 60%;
     max-width: 60%;
@@ -36,34 +38,52 @@ h1 {
 h2 {
     color: whitesmoke;
     font-size: 50px;
+    margin-bottom: 30px;
 }
 p {
-    color: #78693b;
+    color: rgba(245, 245, 245, 0.9);
     line-height: 1.5;
     font-size: 20px;
+}
+.cat-photo {
+    width: 80%;
+    display: block;
+    margin: 50px auto;
+    opacity: 0.8;
+    border-radius: 35px;
+
 }
 a {
     display: block;
     text-align: center;
     font-size: 20px;
-    color: #c68e16;
+    font-weight: 600;
+    color: #7f5b0d;
     text-decoration: overline;
-
+    margin: 30px auto;
 }
 a:hover {
     text-decoration: underline;
+    cursor: pointer;
+    
 }
 button {
     display: block;
     text-align: center;
-    margin: 30px auto;
+    margin: 40px auto;
     padding: 30px;
     font-size: 30px;
+    font-weight: 900;
     border-radius: 8px 8px 25px 25px;
     background-color: #baa25bca;
-    color: #867D07;
-    color: #c38c16;
-
+    color: #7f5b0d;
     border: 0.5px solid whitesmoke;
     box-shadow: 5px 5px 10px 5px #867D07;
+    cursor: pointer;
+    font-family: inherit;
+    transition: all 300ms ease;
+}
+button:hover {
+    box-shadow: 5px 5px 10px 5px whitesmoke;
+    
 }
