--- a/SheCodes_Basics/Basics-AddOn/basics-addon-project/animations.css
+++ b/SheCodes_Basics/Basics-AddOn/basics-addon-project/animations.css
@@ -1,21 +1,4 @@
-body {
-    background-color: lightgoldenrodyellow;
-}
-.darkThemeButton {
-    background-color: darkgoldenrod;
-    font-size: 12px;
-    color: wheat;
-    padding: 5px 8px;
-}
-.darkThemeButton:hover {
-    background-color: wheat;
-    color: darkgoldenrod;
-}
-h1,
-h2 {
-    text-align: center;
-}
-/* Image Styles */
+/* Image animations */
 img {
     max-width: 100%;
     border-radius: 12px;
@@ -57,37 +40,10 @@ img {
     transform: scale(0.9);
     filter: saturate(30%);
 }
-.bee-picture-6 {
+/* .bee-picture-6 {
     transition: all 300ms ease-out;
 }
 .bee-picture-6:hover {
     transform: rotate(3turn) scale(1.5);
     filter: sepia(60%);
-}
-/* Container Styles */
-.container {
-    background-color: rgba(255, 217, 0, 0.2);
-    margin: 5px auto;
-    max-width: 600px;
-    padding: 20px;
-    border-radius: 10px;
-}
-button {
-    display: block;
-    margin: 0 auto;
-    border: 1px solid gold;
-    background-color: white;
-    font-size: 24px;
-    border-radius: 6px;
-    padding: 10px 15px;
-    transition: all 150ms ease-in-out;
-}
-button:hover {
-    background-color: gold;
-    cursor: pointer;
-}
-footer {
-    text-align: center;
-    margin: 10px 0;
-    font-size: 20px;
-}
+} */
