--- a/SheCodes_Basics/Basics-AddOn/basics-addon-project/animations.css
+++ b/SheCodes_Basics/Basics-AddOn/basics-addon-project/animations.css
@@ -6,44 +6,18 @@ img {
 }
 .bee-intro-picture {
     margin-top: 30px;
-    transition: all 150ms ease-in-out;
+    transition: all 450ms ease-in-out;
 }
 .bee-intro-picture:hover {
     transform: scale(1.2);
     filter: drop-shadow(16px 16px 40px gold) contrast(110%);
 }
-.bee-picture-2 {
-    transition: all 200ms ease-in;
+
+.grid img {
+    transition: all 400ms ease-in-out;
 }
-.bee-picture-2:hover {
-    transform: rotate(3deg);
+.grid img:hover {
+    transform: scale(1.5);
     filter: brightness(1.1);
+    filter: drop-shadow(10px 10px 20px gold) contrast(110%);
 }
-.bee-picture-3 {
-    transition: all 300ms ease-out;
-}
-.bee-picture-3:hover {
-    transform: translateX(40px);
-    filter: drop-shadow(-32px -6px 30px #0f2100);
-}
-.bee-picture-4 {
-    transition: all 400ms ease;
-}
-.bee-picture-4:hover {
-    transform: rotate(2turn);
-    filter: hue-rotate(90deg);
-}
-.bee-picture-5 {
-    transition: all 400ms ease;
-}
-.bee-picture-5:hover {
-    transform: scale(0.9);
-    filter: saturate(30%);
-}
-/* .bee-picture-6 {
-    transition: all 300ms ease-out;
-}
-.bee-picture-6:hover {
-    transform: rotate(3turn) scale(1.5);
-    filter: sepia(60%);
-} */
