--- a/SheCodes_Basics/Basics-AddOn/basics-addon-project/style.css
+++ b/SheCodes_Basics/Basics-AddOn/basics-addon-project/style.css
@@ -23,9 +23,13 @@ body {
 }
 
 /* Container Styles */
+h1 {
+    font-size: 38px;
+}
 h1,
 h2 {
     text-align: center;
+    letter-spacing: 1.8px;
 }
 p {
     font-size: 22px;
@@ -53,6 +57,7 @@ a:hover {
 button {
     display: block;
     margin: 0 auto;
+    margin-top: 12px;
     border: 1px solid gold;
     background-color: #C87100;
     color: lightgoldenrodyellow;
@@ -67,6 +72,6 @@ button:hover {
 }
 footer {
     text-align: center;
-    margin: 10px 0;
+    margin: 5px 0;
     font-size: 20px;
 }
